--- a/app/views/UseCases.html
+++ b/app/views/UseCases.html
@@ -1,8 +1,16 @@
-<div>
-    <div>
-        <input type="text" data-ng-model="UseCases" />
+
+    <div class='inputcenter'>
+	    <input class='inputcenter' type="text" value='Comments' /> 
+	    <hr>
+		<h4> Use Cases </h4>
+	        <img src="content/img/uc1.gif">
+	    </div>
+		<hr>
+	    <div class='inputcenter'>
+			<h4> Class Diagrams </h4>
+		    <img src="content/img/cd1.jpg">
+		    <br>
+		    <hr>
+		    <img src="content/img/cd2.gif">
+    	</div>
     </div>
-    <div>
-        <h5>Places found Near by ({{UseCases}})</h5>
-    </div>
-</div>
