--- a/app/views/discussion.html
+++ b/app/views/discussion.html
@@ -1,9 +1,10 @@
 <div>
+    
     <div>
-        <input type="text" data-ng-model="discussion" />
+    	<h4> Deadline for the project <input class='inputcenter' type="text" data-ng-model="deadline" /> 
+    	</h4>
     </div>
-    <div>
-        <h5>Places found Near by ({{discussion}})</h5>
-    </div>
+	<br>
+    <img src="content/img/subsystems.png">
 </div>
 
