--- a/app/views/Timeline.html
+++ b/app/views/Timeline.html
@@ -1,9 +1,9 @@
 <div>
-    <div>
-        <input type="text" data-ng-model="Timeline" />
+    <div class='inputcenter'>
+        <h5>{{Timeline}}</h5>
+        <br>
     </div>
-    <div>
-        <h5>Places found Near by ({{Timeline}})</h5>
-    </div>
+    <div class="timeline" data-uri="http://wellcomelibrary.org/content/timelines/history-of-genetics-timeline/" data-eventid="" style="width:100%; min-height:600px; background-color: #000"></div>
+	<script type="text/javascript" src="http://wellcomelibrary.org/plugins/timeline/embed.min.js"></script><script type="text/javascript">/* wordpress fix */</script>
 </div>
 
