--- a/app/views/Timeline.html
+++ b/app/views/Timeline.html
@@ -3,7 +3,8 @@
         <h5>{{Timeline}}</h5>
         <br>
     </div>
-    <div class="timeline" data-uri="http://wellcomelibrary.org/content/timelines/history-of-genetics-timeline/" data-eventid="" style="width:100%; min-height:600px; background-color: #000"></div>
-	<script type="text/javascript" src="http://wellcomelibrary.org/plugins/timeline/embed.min.js"></script><script type="text/javascript">/* wordpress fix */</script>
+    <div class="timeline"  style="width:100%; min-height:600px; background-color: #000">
+    <iframe src='//cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1cWQ5FzVf41bTMGZuepqco9SWIjzPjVSpq8sJp_tnddw&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
+    </div>
 </div>
 
